# CSLM

./: .gitignore  README.md  config.json  config.py  dataset.py  datautils.py  model.py  pyproject.toml  requirements.txt  shaleen-requirements.txt  train.py  train_baseline.sh
cslm/: config.json  config.py  dataset.py  model.py  test.py  train.py
cslm/data/: Bohra_hate_speech_CS.csv  create_splits_HS.py  create_splits_SA.py  format_data.py  hinglish_masked.csv  hinglish_unmasked.csv  masked_sa_english_static_train.csv  preprocess_sa_english.py  preprocess_sa_hindi.py  sa_english_test.csv  sa_english_val.csv  sa_hindi_rom_preprocessed_train.csv  sa_hindi_rom_preprocessed_tweets.csv  sa_hindi_rom_tweets.csv  sa_hindi_rom_tweets.txt  sa_hinglish_raw.csv  sa_hinglish_reformatted.csv  sa_hinglish_test.csv  sa_hinglish_train.csv  sa_hinglish_val.csv  sa_malayalam.csv  sa_malayalam_raw.csv  sa_malayalam_reformatted.csv  sa_malayalam_test.csv  sa_malayalam_train.csv  sa_malayalam_val.csv  sa_tamil.csv  sa_tamil_raw.csv  sa_tamil_reformatted.csv  sa_tamil_test.csv  sa_tamil_train.csv  sa_tamil_val.csv  static_data_augmentation.py  test.csv  train.csv  unmasked_sa_english_static_train.csv  val.csv
data/: create_splits_HS.py  hate_speech.csv  test.csv
