[tool.poetry]
name = "cslm"
version = "0.1.0"
description = ""
authors = ["Kriti Anandan <anandankriti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
torch = "^1.13.1"
wandb = "^0.13.10"
pytorch-lightning = "^1.9.1"
pandas = "^1.5.3"
transformers = "^4.26.1"
datasets = "^2.9.0"
scikit-learn = "^1.2.1"
tqdm = "^4.64.1"

[tool.poetry.scripts]
datasplit_HS = "cslm.data.create_splits_HS:main"
static_da = "cslm.data.static_data_augmentation:main"
train = "cslm.train:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
