[tool.poetry]
name = "cslm"
version = "0.1.0"
description = ""
authors = ["Kriti Anandan <anandankriti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]

[tool.poetry.scripts]
datasplit_SA = "cslm.data.create_splits_SA:main"
datasplit_HS = "cslm.data.create_splits_HS:main"
static_da = "cslm.data.static_data_augmentation:main"
train = "cslm.train:main"
test = "cslm.test:main"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"